recursion.lessons.recursion.sierpinski.Sierpinski.scala.error
Sierpinski:12: error: not found: value serpinski
	serpinski(level-1,length/2)
        ^